# knapsax

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
knapsax/: aco.py  ga.py  optimization.py  populational.py  pso.py  stats.py  utils.py
notebooks/: aco.ipynb  ga.ipynb  hillclimbing.ipynb  main.ipynb  pso.ipynb  statistics.ipynb
